nav color, css fixed

--- a/Swallab/_css/root.css
+++ b/Swallab/_css/root.css
@@ -1,7 +1,7 @@
 :root {
 
     nav {
-        background-color: #E5A67A !important;
+        background-color: #EEE9D5 !important;
     }
 
     body {
