--- a/Swallab/css/backstage.css
+++ b/Swallab/css/backstage.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../_images/background.webp);
+    background-image: url(../images/background.webp);
 }
 header {
     border-bottom: 1px solid #000;
