--- a/Swallab/css/profilexi.css
+++ b/Swallab/css/profilexi.css
@@ -3,7 +3,7 @@ header{
     background-color: #EEE9D5;
     }
 body{
-    background-image: url("./../_images/background.webp");
+    background-image: url("./../images/background.webp");
     background-attachment: fixed;
 }
 footer{background-color: #ecdea8;}
