--- a/Swallab/css/root.css
+++ b/Swallab/css/root.css
@@ -8,7 +8,7 @@
         display: flex;
         flex-direction: column;
         min-height: 100vh;
-        background-image: url(../_images/root/bgi.png);
+        background-image: url(../images/root/bgi.png);
         background-color: #EEE9D5;
     }
 
