insert into database

--- a/Swallab/css/backstage.css
+++ b/Swallab/css/backstage.css
@@ -296,6 +296,11 @@ input[type=hidden]{
     font-weight: bolder;
     box-shadow: 0 0 0 1px #000;
 }
+
+#submitResult {
+    color: #f00;
+    margin-right: 20px;
+}
 /* ================================== */
 
 /*  新增/修改菜單 */
