--- a/Swallab/css/orderxi.css
+++ b/Swallab/css/orderxi.css
@@ -3,7 +3,7 @@ header{
     background-color: #EEE9D5;
     }
 body{
-    background-image: url("./../image/大專bg.png");
+    background-image: url("./../images/root/bgi.png");
     background-attachment: fixed;
 }
 footer{background-color: #ecdea8;}
