--- a/Swallab/css/backstage.css
+++ b/Swallab/css/backstage.css
@@ -391,9 +391,11 @@ input[type=hidden]{
     align-items: center;
 }
 #photoResult img {
+    width: 200px;
+    height: 200px;
     object-fit: contain;
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
 
 }
 .addOptionContainer>.col>.col-12 {
