微調程式碼+修改php+移出JS

--- a/Swallab/css/foodNotes.css
+++ b/Swallab/css/foodNotes.css
@@ -33,7 +33,7 @@ footer{
     z-index: 1;
     }
 .overflow-hidden{overflow: hidden;}
-
+.mt8{margin-top: 8%;}
 /* 新增食記按鈕 */
 #write{
     position: fixed;
