--- a/Swallab/css/demoHotpot.css
+++ b/Swallab/css/demoHotpot.css
@@ -31,6 +31,10 @@ footer{
     cursor: pointer;
     z-index: 1;
     }
+.hrStyle{
+    border: 1px solid black;
+    width:80%;
+}
 
 /* 隱藏文字溢出 */
 .ellipsis { 
@@ -164,6 +168,7 @@ footer{
 .modal-footer>button:hover{
     color: #efa47e;
     background-color: white;
+    font-weight: bold;
 }
 /* 留言評論區-會員發表處 */
 .commentHeadphoto{
