add insert/update/delete menu

--- a/Swallab/css/backstage.css
+++ b/Swallab/css/backstage.css
@@ -281,7 +281,7 @@ input[type=hidden]{
     margin: 30px;
     text-align: right;
 }
-#discountBtn, #editMenuBtn {
+#discountBtn, #addMenuBtn, #modifyMenuBtn {
     border: 1px solid #000;
     padding: 10px 20px;
     border-radius: 5px;
@@ -292,14 +292,19 @@ input[type=hidden]{
     color: #fff;
 }
 
-#discountBtn:hover, #editMenuBtn:hover {
+#discountBtn:hover, #addMenuBtn:hover, #modifyMenuBtn:hover {
     font-weight: bolder;
     box-shadow: 0 0 0 1px #000;
 }
 
-#submitResult {
+#submitResult,
+#mySubmitResult,
+#deleteResult {
     color: #f00;
     margin-right: 20px;
+    /* background-color: #ffffff7e; */
+    padding: 5px 10px;
+    border-radius: 10px;
 }
 /* ================================== */
 
@@ -361,13 +366,28 @@ input[type=hidden]{
     align-items: center;
 
 }
-#editForm {
+#editForm,
+#modifyForm {
     position: relative;
+    width: 80%; /* 設置固定寬度，根據需要調整 */
+    max-width: 800px; /* 設置最大寬度，根據需要調整 */
+    margin: auto; /* 中心對齊 */
 }
-#myClose {
+
+#deleteForm{
+    position: relative;
+    margin: auto;
+}
+#myClose,
+#myClose2 {
     position: absolute;
-    top: -40px;
-    right:-40px;
+    top: -4%;
+    right:-2%;
+}
+#myClose3 {
+    position: absolute;
+    top: -10%;
+    right: -10%;
 }
 .addOptionContainer {
     padding: 20px;
@@ -380,7 +400,8 @@ input[type=hidden]{
     display: flex;
     width: 200px;
 }
-#photoResult {
+#photoResult,
+#myPhotoResult {
     border: 1px solid #000;
     width: 200px;
     height: 200px;
@@ -389,8 +410,10 @@ input[type=hidden]{
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
-#photoResult img {
+#photoResult img,
+#myPhotoResult img {
     width: 200px;
     height: 200px;
     object-fit: contain;
@@ -406,9 +429,26 @@ input[type=hidden]{
 }
 .addOptionContainer>.col>.col-12>input, 
 .addOptionContainer>.col>.col-12>select{
-    width: 125px;
+    width: 55%;
     height: 33px;
+    margin: 0;
 }
+
+.colBtn {
+    border: 1px solid #000;
+    border-radius: 10px;
+    padding: 10px 20px;
+    margin: 30px;
+    cursor: pointer;
+}
+
+.colBtn:hover{
+    font-weight: bolder;
+    box-shadow: 0 0 0 1px #000;
+}
+/* .colBtn:nth-child(1) {
+    color: #f00;
+} */
 /* ================ */
 
 /* 編輯餐廳資訊 */
