--- a/Swallab/css/headpage.css
+++ b/Swallab/css/headpage.css
@@ -1,23 +1,28 @@
         /* 餐廳大門圖 */
         #mainImageRest {
-            transform-origin: left;
+            transform-origin: center center;
             transition: all 1.5s ease-in-out;
         }
 
         /* 食記大門圖 */
         #mainImageNotes {
-            transform-origin: right;
+            transform-origin: center center;
             transition: all 1.5s ease-in-out;
         }
 
         /* 餐廳開門動畫 */
         .doorOpenLeft {
-            transform: perspective(1200px) translateZ(0px) translateX(0px) translateY(0px) rotateY(105deg);
+            transform: perspective(1200px) translateZ(0px) translateX(0px) translateY(0px) rotateY(50deg);
             animation-fill-mode: forwards;
         }
 
         /* 食記開門動畫 */
         .doorOpenRight {
-            transform: perspective(1200px) translateZ(0px) translateX(0px) translateY(0px) rotateY(-105deg);
+            transform: perspective(1200px) translateZ(0px) translateX(0px) translateY(0px) rotateY(-50deg);
             animation-fill-mode: forwards;
+        }
+
+        #mainImageRest button,
+        #mainImageNotes button{
+            border:0cap
         }
