--- a/Swallab/css/myHistory.css
+++ b/Swallab/css/myHistory.css
@@ -29,11 +29,11 @@
 }
 
 .sidebar {
-    position: fixed;
-    top: 20%;
+    position: sticky;
+    top: 30%;
     background-color: white;
     height: 180px;
-    margin: 5% 3% 0 0;
+    margin: 0% 0% 0 0;
     padding: 1%;
     border-radius: 5%;
     box-shadow: 5px 5px 5px #aaa;
