--- a/Swallab/css/nav.css
+++ b/Swallab/css/nav.css
@@ -33,8 +33,8 @@
     width: 100%;
     height: 3em;
     position: absolute;
-    top: 100%;
-    
+    top: 80%;
+    left: 25%;
 }
 .popupBlog{
     display: none;
