--- a/Swallab/css/backstage.css
+++ b/Swallab/css/backstage.css
@@ -360,7 +360,7 @@ input[type=hidden]{
     background-color: #00000080;
     width: 100%;
     height: 100%;
-    z-index: 100;
+    z-index: 1000;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -393,6 +393,8 @@ input[type=hidden]{
     padding: 20px;
     background-color: #fff;
     border-radius: 10px;
+    z-index: 2000 !important;
+    position: relative;
 }
 .addOptionContainer > .col >input {
     /* border: 1px solid #000; */
