--- a/Swallab/css/nav.css
+++ b/Swallab/css/nav.css
@@ -1,81 +1,99 @@
-            /* 餐廳或食記 icon */
-            
-            .theicon {
-                height: 1.5em !important;
-                background-size: 1.5em;
-                background-image: url(../_images/nav_icon/restaurant.png);
-                background-repeat: no-repeat;
-                /* z-index: 999; */
-            }
+.nav_mainbtn {
+    white-space: nowrap;
+}
 
-            .icon {
-                height: 1.5em;
-                /* z-index:999; */
-                background-size: cover;
-            }
+.icon {
+    height: 1.5em;
+    background-size: cover;
+}
 
-            /* 餐廳或食記 icon 觸發 */
-            .popup {
-                display: none;
-                position: relative;
-                top: 100%;
-                width: 1.5em;
-                height: 1.5em;
-                /* background-image: url('./img/blog.png'); */
-                background-size: cover;
-            }
+.filter_btn {
+    display: block;
+    margin-top: 1.5em;
+    white-space: nowrap;
+    z-index: 1;
+}
 
-            /* 食記 icon 彈出 */
-            .popupBlog {
-                display: none;
-                position: relative;
-                /* top: 100%; */
-                width: 1.5em;
-                height: 1.5em;
-                background-image: url('../_images/nav_icon/blog.png');
-                background-size: cover;
-            }
+/* 餐廳或食記 icon */
+.theicon {
+    width: 15%;
+    height: 100%;
+    position: relative;
+    align-items: center;
+}
 
-            /* 餐廳 icon 彈出 */
-            .popupRest {
-                display: none;
-                position: relative;
-                top: -100%;
-                left: 100%;
-                width: 1.5em;
-                height: 1.5em;
-                background-image: url('../_images/nav_icon/restaurant.png');
-                background-size: cover;
-            }
+/* 餐廳或食記 icon 觸發 */
+.popup{
+    width: 100%;
+    align-items: center;
+    visibility: visible;
+}
+.popupBR{
+    display: none;
+    width: 100%;
+    height: 3em;
+    position: absolute;
+    top: 80%;
+    left: 25%;
+}
+.popupBlog{
+    display: none;
+    width: 1.5em;
+    left: 50%;
+}
+.popupRest {
+    display: none;
+    width: 50%;
+}
 
-            .logo {
-                height: 5em;
-                width: auto;
-                border-radius: 50%;
-            }
+/* .theicon:hover .popupBlog,
+.theicon:hover .popupRest {
+    display: flex;
+} */
 
-            /* .btnPills{
+/*  */
+
+
+.logo {
+    height: 5em;
+    width: auto;
+    border-radius: 50%;
+}
+
+/* .btnPills{
                 display: block; 
                 margin-left: 10%; 
                 margin-top: 1.5em; 
                 white-space: nowrap; z-index: 1;
             } */
-            /* 搜尋框相關 */
-            .dropdown-content a {
-                background-color: #fff;
-                color: black;
-                padding: 12px 16px;
-                text-decoration: none;
-                display: block;
-                border: 1px solid #ddd;
-                /* 淺色框線 */
-                box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-                /* 立體感 */
-                position: absolute;
-                z-index: 99999 !important;
+/* 搜尋框相關 */
+.dropdown-content a {
+    background-color: #fff;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    border: 1px solid #ddd;
+    /* 淺色框線 */
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    /* 立體感 */
+    position: absolute;
+    z-index: 99999 !important;
 
-            }
+}
 
-            .dropdown-content a:hover {
-                background-color: rgba(111, 107, 107)
-            }
+.dropdown-content a:hover {
+    background-color: #e5a67a;
+    color: white;
+}
+
+.btnLogin{
+    border: 2px, solid,#e5a67a !important;
+    border-radius: 5%;
+    color: #e5a67a !important;
+}
+
+.btnLogin:hover{
+    background-color: #e5a67a !important;
+    color: white !important;
+}
