新增留言編輯刪除按鈕-未完成

--- a/Swallab/css/demoHotpot.css
+++ b/Swallab/css/demoHotpot.css
@@ -181,7 +181,7 @@ footer{
     overflow: hidden;
     margin: auto;
 }
-.commentHeadphoto>div:nth-child(1)>img{
+.commentHeadphoto > div:nth-child(1) img{
     width: 200px;
     height: 200px;
     object-fit: cover;
@@ -195,7 +195,18 @@ footer{
     display: flex;
     padding: 10px 20px 0 20px;
 }
-.commentHeadphoto>div:nth-child(2)>p:nth-child(2){
+/* .commentHeadphoto>div:nth-child(2)>p:nth-child(3) button{
     align-self: flex-end;
     margin-right: 10px;
+    text-align: right;
+    width: 100%;
+    float:right
+} */
+/* #edit{
+   text-align: right; width: 100%
+} */
+#edit button :hover{
+    color: #efa47e!important; 
+    background-color: white!important; 
 }
+#textLine{text-decoration: none;}
