--- a/Swallab/css/root.css
+++ b/Swallab/css/root.css
@@ -14,7 +14,7 @@
 
     footer {
         flex-shrink: 0;
-        width: 100vw !important;
+        /* width: 100vw !important; */
         background-color: #6377B8;
     }
 
