--- a/Swallab/css/backstage.css
+++ b/Swallab/css/backstage.css
@@ -11,6 +11,26 @@ header {
 #myLoading {
     text-align: center;
 }
+
+#mySmallLoading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #00000015;
+    width: 100%;
+    height: 100%;
+    z-index: 2000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loadingCon {
+    position: relative;
+    width: 80%; 
+    max-width: 5px; 
+    margin: auto; 
+}
 .item>div{
     background-color: #f00;
     width: 15%;
@@ -374,9 +394,9 @@ input[type=hidden]{
 #editForm,
 #modifyForm {
     position: relative;
-    width: 80%; /* 設置固定寬度，根據需要調整 */
-    max-width: 800px; /* 設置最大寬度，根據需要調整 */
-    margin: auto; /* 中心對齊 */
+    width: 80%; 
+    max-width: 800px; 
+    margin: auto; 
 }
 
 #deleteForm{
