--- a/Swallab/css/root.css
+++ b/Swallab/css/root.css
@@ -17,6 +17,7 @@
         /* width: 100vw !important; */
         /* background-color: #d1bfa8 */
         background-color:#7A8A9E
+        /* background-color:#bed8f8 */
     }
 
     .logo {
