--- a/Swallab/css/restaurantxi.css
+++ b/Swallab/css/restaurantxi.css
@@ -20,11 +20,21 @@ footer{background-color: #ecdea8;}
 .position-relative{position: relative;}
 .countDown{
     position: absolute;
-    background-color: #efa47e;
+    background-color: white;
     top: -8%;
     right: -8%; 
-    padding: 3% 5%;
-    color:white;
+    padding: 1% 2%;
+    color: black;
+    border: 2px solid #FF4500;
+    border-radius: 10px;
+    
+}
+.countDownTime{
+    color: red;
+    font-size: 25px;
+    font-weight: bold;
+    font-style: italic;
+    margin-left: 5px;
 }
 .overflow-hidden{overflow: hidden;}
 .custom-ul {
