--- a/Swallab/css/root.css
+++ b/Swallab/css/root.css
@@ -8,14 +8,15 @@
         display: flex;
         flex-direction: column;
         min-height: 100vh;
-        background-image: url(../_images/root/bgi.png);
-        background-color: #EEE9D5;
+        background-image: url(../images/root/bgi.png);
+        /* / background-color: #EEE9D5; / */
     }
 
     footer {
         flex-shrink: 0;
-        width: 100vw !important;
-        background-color: #6377B8;
+        /* / width: 100vw !important; / */
+        /* / background-color: #d1bfa8 / */
+        background-color:#7A8A9E
     }
 
     .logo {
