--- a/Swallab/css/foodNotes.css
+++ b/Swallab/css/foodNotes.css
@@ -33,7 +33,15 @@ footer{
     z-index: 1;
     }
 .overflow-hidden{overflow: hidden;}
-
+.mt8{margin-top: 8%;}
+.sideBar {
+    position: sticky;
+    top: 50px; /* 導覽列的高度 */
+}
+#myLoading{
+    text-align: center;
+    display: none;
+}
 /* 新增食記按鈕 */
 #write{
     position: fixed;
