--- a/Swallab_0812/public/Swallab/css/nav.css
+++ b/Swallab_0812/public/Swallab/css/nav.css
@@ -97,3 +97,24 @@
     background-color: #e5a67a !important;
     color: white !important;
 }
+
+#myDropdown2 {
+    max-width: 200px;
+    max-height: 150px;
+    overflow-y: auto;
+    background-color: white;
+    border: 1px solid #ddd;
+    z-index: 1000;
+}
+
+#myDropdown2 a {
+    display: flex;
+    padding: 8px;
+    text-decoration: none;
+    color: black;
+    position: relative;
+}
+
+#myDropdown2 a:hover {
+    background-color: #e5a67a;
+    color: white;}
