--- a/Swallab/css/root.css
+++ b/Swallab/css/root.css
@@ -9,13 +9,15 @@
         flex-direction: column;
         min-height: 100vh;
         background-image: url(../images/root/bgi.png);
-        background-color: #EEE9D5;
+        /* background-color: #EEE9D5; */
     }
 
     footer {
         flex-shrink: 0;
         /* width: 100vw !important; */
-        background-color: #6377B8;
+        /* background-color: #d1bfa8 */
+        background-color:#7A8A9E
+        /* background-color:#bed8f8 */
     }
 
     .logo {
