headpage, nav css

--- a/Swallab_0812/public/Swallab/css/headpage.css
+++ b/Swallab_0812/public/Swallab/css/headpage.css
@@ -4,6 +4,7 @@
     font-size: 6em;
     font-weight: bolder;
     text-align: center;
+    color:#b67546;font-weight: bold;text-decoration: none;
     margin-bottom: 8%;
     position: relative;
     top: 40px;
