--- a/Swallab_0812/public/Swallab/css/nav.css
+++ b/Swallab_0812/public/Swallab/css/nav.css
@@ -1,5 +1,16 @@
 .nav_mainbtn {
     white-space: nowrap;
+    color:#8B4513;font-weight: bold;
+    text-decoration: none;
+}
+
+.nav_mainbtn_rest{
+    margin-left: 5px;
+    margin-right: 20px;
+}
+
+.nav_mainbtn_note{
+    margin-left: 20px;
 }
 
 .icon {
