--- a/Swallab_0812/public/Swallab/css/root.css
+++ b/Swallab_0812/public/Swallab/css/root.css
@@ -15,7 +15,9 @@
     footer {
         flex-shrink: 0;
         width: 100vw !important;
-        background-color: #6377B8;
+        background-color:#7A8A9E
+
+        /* background-color: #6377B8; */
     }
 
     .logo {
