--- a/Swallab/css/restaurantxi.css
+++ b/Swallab/css/restaurantxi.css
@@ -3,7 +3,7 @@ header{
     background-color: #EEE9D5;
     }
 body{
-    background-image: url("./../image/大專bg.png");
+    background-image: url("../image/subtle_white_feathers.webp");
     background-attachment: fixed;
 }
 li{margin: 5% 0;}
@@ -16,15 +16,25 @@ footer{background-color: #ecdea8;}
     cursor: pointer;
     z-index: 1;
     }
-/* 限時優惠 */
+/* / 限時優惠 / */
 .position-relative{position: relative;}
 .countDown{
     position: absolute;
-    background-color: #efa47e;
+    background-color: white;
     top: -8%;
     right: -8%; 
-    padding: 3% 5%;
-    color:white;
+    padding: 1% 2%;
+    color: black;
+    border: 2px solid #FF4500;
+    border-radius: 10px;
+    
+}
+.countDownTime{
+    color: red;
+    font-size: 25px;
+    font-weight: bold;
+    font-style: italic;
+    margin-left: 5px;
 }
 .overflow-hidden{overflow: hidden;}
 .custom-ul {
@@ -63,6 +73,9 @@ footer{background-color: #ecdea8;}
 }
 .card-body > img {
     transition: transform 0.3s ease;
+    width: 100%;
+    height: 200px; 
+    object-fit: cover; 
     }
 
 .card-body > img:hover {
@@ -79,13 +92,6 @@ footer{background-color: #ecdea8;}
     overflow: hidden; 
     text-overflow: ellipsis; 
     }
-    .img-fluid {
-        width: 100%;
-        height: 300px; 
-        object-fit: cover; 
-    }
-    .img-fluid1 {
-        width: 100%;
-        height: 200px; 
-        object-fit: cover; 
-    }
+.card-footer span{
+    padding:0 10px
+}
