Favorite ongoing fixing notecontent and avg_score

--- a/MySwallab/public/Swallab/css/myHistory_final.css
+++ b/MySwallab/public/Swallab/css/myHistory_final.css
@@ -145,15 +145,35 @@ body {
     object-fit: cover;
 }
 
-.activity-content {
+.activity-content,
+.activity-content-note {
     flex: 1;
     margin-bottom: 10px;
 }
+.activity-content-note,
+.activity-content-comment {
+    display: -webkit-box;
+-webkit-line-clamp: 3;
+-webkit-box-orient: vertical;
+white-space: normal;
+overflow-y: hidden;
+height: 110%;
+}
 
-.activity-title {
+.activity-title,
+.activity-title-order,
+.activity-title-note {
     font-weight: bold;
     font-size: 1.2em;
     margin-bottom: 10px;
+}
+
+.activity-title-note{
+    display: -webkit-box;
+-webkit-line-clamp: 2;
+-webkit-box-orient: vertical;
+white-space: normal;
+overflow-y: hidden;
 }
 
 .activity-info, .myRecordsInfo {
@@ -167,11 +187,11 @@ body {
     flex-direction: column;
     font-size: smaller;
 
-    max-height: 100px; /* 調整這個值以適應您的設計 */
+    max-height: 100px; 
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 3; /* 控制顯示的行數 */
+    -webkit-line-clamp: 3; 
     -webkit-box-orient: vertical;
 }
 
@@ -185,7 +205,7 @@ body {
 }
 
 .myNotes {
-    height: 60px;
+    height: 70px;
 }
 
 .activity-buttons {
