合併登入系統

--- a/Swallab/css/backstage.css
+++ b/Swallab/css/backstage.css
@@ -1,11 +1,19 @@
-body{
+body {
     background-image: url(../images/background.webp);
 }
+
 header {
     border-bottom: 1px solid #000;
     text-align: center;
     height: 100px;
     background-color: #eee9d5;
+}
+
+#userName {
+    padding: 4px 20px;
+    margin: 0;
+    font-weight: bold;
+    color: #8B4513;
 }
 
 #myLoading {
@@ -27,15 +35,17 @@ header {
 
 .loadingCon {
     position: relative;
-    width: 80%; 
-    max-width: 5px; 
-    margin: auto; 
+    width: 80%;
+    max-width: 5px;
+    margin: auto;
 }
-.item>div{
+
+.item>div {
     background-color: #f00;
     width: 15%;
 }
-.mySidebar{
+
+.mySidebar {
     /* border: 1px solid #000; */
     height: 300px;
     margin: 15% 30px 0 0;
@@ -45,11 +55,13 @@ header {
     position: sticky;
     top: 200px;
 }
-.mySidebar>a{
+
+.mySidebar>a {
     text-decoration: none;
     color: #000;
 }
-.mySidebar>a>p{
+
+.mySidebar>a>p {
     border: 2px solid #000;
     border-radius: 10px;
     text-align: center;
@@ -58,52 +70,63 @@ header {
     font-weight: bolder;
     cursor: pointer;
 }
-.mySidebar>.active>p:nth-child(1){
+
+.mySidebar>.active>p:nth-child(1) {
     background-color: #e5a67a;
     color: #fff;
 }
-.mySidebar>a>p:hover{
+
+.mySidebar>a>p:hover {
     background-color: #e5a67a;
     color: #fff;
 }
-.options{
+
+.options {
     justify-content: space-around;
     border-bottom: 1px solid #000;
     margin: 30px;
 }
-.options>a{
+
+.options>a {
     text-decoration: none;
     color: #000;
 }
-.options>a>h3{
+
+.options>a>h3 {
     padding: 20px;
     border-radius: 5px;
 }
+
 .options a.active h3 {
     background-color: #e5a67a;
     font-weight: bolder;
     color: #fff;
 }
-.options>a>h3:hover{
+
+.options>a>h3:hover {
     background-color: #e5a67a;
     font-weight: bolder;
     color: #fff;
 }
+
 .orderStatus {
     display: flex;
     justify-content: space-around;
 }
+
 .orderStatus>p {
     border: 1px solid #000;
     padding: 10px;
     border-radius: 5px;
     cursor: pointer;
 }
+
 .orderStatus>p:hover {
     font-weight: bolder;
     box-shadow: 0 0 0 1px #000;
 }
-.optionContainer{
+
+.optionContainer {
     padding: 20px;
     margin: 20px 0;
     background-color: #fff;
@@ -111,77 +134,91 @@ header {
     box-shadow: 5px 5px 5px #aaa;
     /* border: 1px solid #000; */
 }
-.optionContainer h4{
+
+.optionContainer h4 {
     padding: 20px;
 }
-.optionContainer>.item> p{
+
+.optionContainer>.item>p {
     padding: 20px;
 }
-.itemContainer{
+
+.itemContainer {
     text-align: center;
 }
+
 .itemContainer .col-6 {
     font-weight: bolder;
     padding: 10px;
     /* border: 1px solid #000; */
 }
+
 .itemContainer .col-6:nth-child(1),
 .itemContainer .col-6:nth-child(2) {
     font-weight: normal;
 }
-.itemContainer > .col {
+
+.itemContainer>.col {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
     /* border: 1px solid #000; */
 }
-.myButton{
+
+.myButton {
     display: flex;
     justify-content: end;
-    
+
 }
-.myButton>p{
+
+.myButton>p {
     border: 1px solid #000;
     /* color: #fff; */
     padding: 10px;
     margin: 10px;
     border-radius: 5px;
     cursor: pointer;
-    
+
 }
-.myButton>p:nth-child(1){
+
+.myButton>p:nth-child(1) {
     background-color: #e5a67a;
     color: #fff;
 }
-.myButton>p:nth-child(2){
+
+.myButton>p:nth-child(2) {
     order: -1;
 }
-.myButton>p:hover{
+
+.myButton>p:hover {
     font-weight: bolder;
     box-shadow: 0 0 0 1px #000;
 }
 
-.footer{
+.footer {
     background-color: #899acf;
     height: 100px;
     text-align: center;
     margin-top: 50px;
 }
+
 /* ================================ */
 
 
 
 /* 營業時間 */
 
-input[type=hidden]{
+input[type=hidden] {
     border: 1px solid #000;
 }
+
 .editTime {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 5px 5px 5px #aaa;
-    padding:20px;
+    padding: 20px;
 }
+
 .selected {
     background-color: #e5a67a;
     font-weight: bold;
@@ -194,10 +231,12 @@ input[type=hidden]{
     border-radius: 5px;
     cursor: pointer;
 }
+
 .col>label:hover {
     font-weight: bolder;
     box-shadow: 0 0 0 1px #000;
 }
+
 .weekdaysContainer {
     display: flex;
     justify-content: center;
@@ -217,21 +256,26 @@ input[type=hidden]{
     justify-content: flex-end;
 }
 
-#addBreakTime:hover, #addHolidayBreakTime:hover {
+#addBreakTime:hover,
+#addHolidayBreakTime:hover {
     font-weight: bolder;
     box-shadow: 0 0 0 1px #000;
 }
-#addBreakTime, #addHolidayBreakTime {
+
+#addBreakTime,
+#addHolidayBreakTime {
     border: 1px solid #000;
     padding: 5px 15px;
     border-radius: 5px;
     cursor: pointer;
     margin-right: 30px;
 }
+
 .disable {
     pointer-events: none;
     opacity: .5;
 }
+
 .breakTimeContainer {
     display: flex;
     justify-content: center;
@@ -246,6 +290,7 @@ input[type=hidden]{
     flex: 1;
     text-align: center;
 }
+
 .mySettimeBtn {
     /* border: 1px solid #000; */
     margin: 30px;
@@ -267,6 +312,7 @@ input[type=hidden]{
     font-weight: bolder;
     box-shadow: 0 0 0 1px #000;
 }
+
 /* ================================== */
 
 /* 菜單管理 */
@@ -278,10 +324,12 @@ input[type=hidden]{
 .menuContainer {
     text-align: center;
 }
+
 .newDiscountBtn {
     display: flex;
     justify-content: space-between;
 }
+
 #addDiscount {
     border: 1px solid #000;
     padding: 5px 15px;
@@ -289,24 +337,31 @@ input[type=hidden]{
     cursor: pointer;
     margin-right: 30px;
 }
+
 #addDiscount:hover {
     font-weight: bolder;
     box-shadow: 0 0 0 1px #000;
 }
+
 .fa-trash-can,
 .fa-pen {
     font-size: 1.5em;
     margin-right: 20px;
 }
+
 .fa-trash-can:hover,
 .fa-pen:hover {
     transform: scale(1.1);
 }
+
 .discountBtn {
     margin: 30px;
     text-align: right;
 }
-#discountBtn, #addMenuBtn, #modifyMenuBtn {
+
+#discountBtn,
+#addMenuBtn,
+#modifyMenuBtn {
     border: 1px solid #000;
     padding: 10px 20px;
     border-radius: 5px;
@@ -317,7 +372,9 @@ input[type=hidden]{
     color: #fff;
 }
 
-#discountBtn:hover, #addMenuBtn:hover, #modifyMenuBtn:hover {
+#discountBtn:hover,
+#addMenuBtn:hover,
+#modifyMenuBtn:hover {
     font-weight: bolder;
     box-shadow: 0 0 0 1px #000;
 }
@@ -331,6 +388,7 @@ input[type=hidden]{
     padding: 5px 10px;
     border-radius: 10px;
 }
+
 /* ================================== */
 
 /*  新增/修改菜單 */
@@ -340,11 +398,13 @@ input[type=hidden]{
     border-radius: 10px;
     box-shadow: 5px 5px 5px #aaa;
 }
-.menuListContainer > .col-2 {
+
+.menuListContainer>.col-2 {
     font-weight: bold;
 }
-.menuListContainer > .col-2,
-.myMenuList > .col-2 {
+
+.menuListContainer>.col-2,
+.myMenuList>.col-2 {
     margin: auto;
     /* border: 1px solid #000; */
     text-align: center;
@@ -354,15 +414,18 @@ input[type=hidden]{
     margin-top: 10px;
     border-bottom: 1px solid #000;
 }
-.myMenuList > .col-2 > img {
+
+.myMenuList>.col-2>img {
     width: 100%;
     border-radius: 5px;
     margin: 10px;
 }
+
 .editMenuCon {
     display: flex;
     justify-content: space-between;
 }
+
 #editMenu {
     border: 1px solid #000;
     padding: 5px 15px;
@@ -371,6 +434,7 @@ input[type=hidden]{
     margin-right: 30px;
     width: 65px;
 }
+
 #editMenu:hover {
     font-weight: bolder;
     box-shadow: 0 0 0 1px #000;
@@ -391,29 +455,33 @@ input[type=hidden]{
     align-items: center;
 
 }
+
 #editForm,
 #modifyForm {
     position: relative;
-    width: 80%; 
-    max-width: 800px; 
-    margin: auto; 
+    width: 80%;
+    max-width: 800px;
+    margin: auto;
 }
 
-#deleteForm{
+#deleteForm {
     position: relative;
     margin: auto;
 }
+
 #myClose,
 #myClose2 {
     position: absolute;
     top: -4%;
-    right:-2%;
+    right: -2%;
 }
+
 #myClose3 {
     position: absolute;
     top: -10%;
     right: -10%;
 }
+
 .addOptionContainer {
     padding: 20px;
     background-color: #fff;
@@ -421,12 +489,14 @@ input[type=hidden]{
     z-index: 2000 !important;
     position: relative;
 }
-.addOptionContainer > .col >input {
+
+.addOptionContainer>.col>input {
     /* border: 1px solid #000; */
     margin: auto;
     display: flex;
     width: 200px;
 }
+
 #photoResult,
 #myPhotoResult {
     border: 1px solid #000;
@@ -439,6 +509,7 @@ input[type=hidden]{
     align-items: center;
     overflow: hidden;
 }
+
 #photoResult img,
 #myPhotoResult img {
     width: 200px;
@@ -448,14 +519,16 @@ input[type=hidden]{
     height: 100%; */
 
 }
+
 .addOptionContainer>.col>.col-12 {
     display: flex;
     /* justify-content: center; */
     align-items: center;
     margin: 10px;
 }
-.addOptionContainer>.col>.col-12>input, 
-.addOptionContainer>.col>.col-12>select{
+
+.addOptionContainer>.col>.col-12>input,
+.addOptionContainer>.col>.col-12>select {
     width: 55%;
     height: 33px;
     margin: 0;
@@ -469,10 +542,11 @@ input[type=hidden]{
     cursor: pointer;
 }
 
-.colBtn:hover{
+.colBtn:hover {
     font-weight: bolder;
     box-shadow: 0 0 0 1px #000;
 }
+
 /* .colBtn:nth-child(1) {
     color: #f00;
 } */
@@ -489,9 +563,11 @@ input[type=hidden]{
     box-shadow: 5px 5px 5px #aaa;
     justify-content: center;
 }
+
 #restaurantInfo {
     margin: 40px;
 }
+
 #restaurantInfo .row .col-6 {
     margin: auto;
     display: flex;
@@ -499,6 +575,7 @@ input[type=hidden]{
     /* text-align: center; */
     border: 1px solid #000;
 }
+
 #restaurantInfo .row .col-6:nth-child(2) {
     display: flex;
     justify-content: flex-start;
@@ -510,6 +587,7 @@ input[type=hidden]{
     padding: 20px;
     display: inline-block;
 }
+
 #restaurantInfo input[type=text],
 #restaurantInfo select {
     width: 500px;
@@ -562,9 +640,23 @@ input[type=hidden]{
 }
 
 /* =================== */
-.p-20{padding: 20px;}
-.m-20{margin: 20px;}
-.m-0{margin: 0;}
+.p-20 {
+    padding: 20px;
+}
+
+.m-20 {
+    margin: 20px;
+}
+
+.m-0 {
+    margin: 0;
+}
+
 /* .my-10{margin: 10px 0;} */
-.mt-20{margin-top: 20px;}
-.d-none{display: none;}
+.mt-20 {
+    margin-top: 20px;
+}
+
+.d-none {
+    display: none;
+}
